--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "osupa-rs"
 version = "0.1.0"
 authors = ["Ristarg <a.filippov@protonmail.com>"]
 
+
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+wasm-bindgen = "0.2"
 byteorder = "1"
 leb128 = "0.2.3"
